fix: Fix spacing for Firefox 118.0.1

--- a/sass/tabs/_browser_tabs.sass
+++ b/sass/tabs/_browser_tabs.sass
@@ -3,7 +3,6 @@
     background-size: 100% 100% !important
     background-repeat: no-repeat !important
     background-position: bottom !important
-    border-bottom: 5px solid $bg_border !important
     box-sizing: content-box !important
 
 .tab-background 
