--- a/sass/tabs/_spacing.sass
+++ b/sass/tabs/_spacing.sass
@@ -10,6 +10,3 @@
 
 .tab-content 
     padding: 0 (29px - 10px) !important
-
-#tabs-newtab-button 
-    margin-top: 3px !important
